@@ -48,6 +48,9 @@ public:
     void postSetupThing(Thing *thing) override;
     void thingRemoved(Thing *thing) override;
 
+signals:
+    void discoveryRtuFinished();
+
 private:
     PluginTimer *m_pluginTimer = nullptr;
 
@@ -56,6 +59,7 @@ private:
         qint16 energySf {1};
     };
 
+    quint16 m_openReplies;
     QHash<Thing *, NetworkDeviceMonitor *> m_monitors;
     QHash<Thing *, KacoSunSpecModbusTcpConnection *> m_tcpConnections;
     QHash<Thing *, KacoSunSpecModbusRtuConnection *> m_rtuConnections;
